--- a/assets/package.json
+++ b/assets/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.4.1"
   }
 }
